--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>        
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2048 Game</title>
     <link rel="stylesheet" href="index.css">
-</head>
+</head>       
 <body>
-    <div id="2048"> 2048 </div>
+    <div id="front"> 2048 </div>
     <div id="score">Score:<span id="scoreValue">0</span></div>
     <button id="newGamebutton">New Game</button>
     <div class="game">
